# s5

./: .gitignore  ARITHMETIC.md  LICENSE.md  PURPOSE.md  QUOTES.md  README.md  WARNING.md  hello_golfed.s5  hello_golfed.s5b  hello_world.s5  nope.s5  pyproject.toml  s5.py  test_nest.py  test_s5.py  trace.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
arithmetic/: PLAN.md  STATUS.md  _full_trace.py  _gen_demo.py  _gen_init.py  _gen_pred.py  _gen_pred1.py  _gen_succ.py  _test_pred.py  _trace.py  _trace2.py  _trace3.py  _verify_pred.py  demo.s5  init.s5  pred.s5  pred1.s5  succ.s5  test_arithmetic.py  test_s5b_all.py  verify_init_succ.py
s5/: __init__.py  __main__.py  binary.py  cli.py  io_handler.py  pretty.py  serialize.py
tests/: test_adversarial.py  test_binary.py  test_dispatch_depth.py  test_io.py  test_nest.py  test_pretty.py  test_s5.py  test_s5b.py
tools/: md_to_mw.py
