[tool.poetry]
name = "s5"
version = "0.1.0"
description = "The Set-Only Language"
authors = []
readme = "README.md"

[tool.poetry.scripts]
s5 = "s5.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
